# contextualized-hatespeech-classification

./: .gitignore  .gitmodules  Pipfile  README.md  TRAIN_EVALUATE.md  pyproject.toml  setup.py  test_train.sh
cards/: BETO-FT.md  space.md
config/: body_ft.json  no_context_ft.json  robertuito_ft.json  text_ft.json
data/: README.md
docs/: TRAIN_EVALUATE.md
evaluations/: context-1.json  context-10  context-12.json  context-13.json  context-2.json  context-3.json  context-4.json  context-5  context-5.json  context-6  context-6.json  context-7  context-7.json  context-8.json  context-9  context-category-0.json  context-category-1.json  context-category-10.json  context-category-11.json  context-category-12.json  context-category-13.json  context-category-15.json  context-category-2.json  context-category-3.json  context-category-4.json  context-category-5.json  context-category-6.json  context-category-7.json  context-category-8.json  context-category-9.json  non-context-1  non-context-10  non-context-10.json  non-context-12.json  non-context-13.json  non-context-15.json  non-context-2.json  non-context-3  non-context-3.json  non-context-4.json  (+64 more)
hatedetection/: __init__.py  analyzer.py  categories.py  datasets.py  metrics.py  model.py  predict.py  preprocessing.py  training.py
notebooks/: Add tokens - preprocessing.ipynb  Analyzer.ipynb  Base Classifier.ipynb  Base Multioutput Classifier.ipynb  Context Analysis.ipynb  Context only Multioutput Classifier.ipynb  Contextualized Classifier.ipynb  Contextualized Multioutput Classifier.ipynb  Error Analysis.ipynb  (+21 more)
(+83 files in other folders)
